Fixed members name with too much white space

--- a/client/css/app/members.styl
+++ b/client/css/app/members.styl
@@ -34,6 +34,9 @@
     margin: 5px
     text-align: center
     height: 40px
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 
   .list
     .member
